deployment/backend.yaml
# backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wettbewerbs-backend
  labels:
    app: wettbewerbs-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wettbewerbs-backend
  template:
    metadata:
      labels:
        app: wettbewerbs-backend
    spec:
      containers:
        - name: wettbewerbs-backend
          image: ghcr.io/pfarrhoferphilip/wettbewerbs-server:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
