deployment/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wettbewerbs-postgres
spec:
  selector:
    app: wettbewerbs-postgres
  ports:
    - port: 5432
      targetPort: 5432
