deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: leocloud-nginx-demo-root
spec:
  ingressClassName: nginx
  rules:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: wettbewerbs-backend
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wettbewerbs-frontend
            port:
              number: 80
